<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="toolbar_sign_in_title" />
	<string name="toolbar_sign_up_title" />
	<string name="button_sign_in_text" />
	<string name="button_sign_up_text" />
	<string name="button_sign_no_account_text" />
	<string name="hint_sign_email" />
	<string name="hint_sign_password" />
	<string name="hint_sign_repeat_password" />
	<string name="hint_sign_verification_code" />
	<string name="error_validation_email" />
	<string name="error_validation_password_match" />
</resources>