<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbar"
		style="@style/MaterialToolbarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:navigationIcon="@drawable/ic_arrow_back"
		tools:navigationIcon="@null"
		tools:title="Авторизация" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin_padding_undefined"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/emailLayout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_padding_20"
				android:layout_marginVertical="@dimen/margin_padding_10"
				android:hint="@string/hint_sign_email"
				android:visibility="gone"
				app:errorEnabled="true"
				tools:hint="Электронная почта"
				tools:visibility="visible">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/emailText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionNext"
					android:inputType="textEmailAddress" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/passwordLayout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_padding_20"
				android:layout_marginVertical="@dimen/margin_padding_10"
				android:hint="@string/hint_sign_password"
				android:visibility="gone"
				app:errorEnabled="true"
				tools:hint="Пароль"
				tools:visibility="visible">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/passwordText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:maxLines="1" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/repeatPasswordLayout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_padding_20"
				android:layout_marginVertical="@dimen/margin_padding_10"
				android:hint="@string/hint_sign_repeat_password"
				android:visibility="gone"
				app:errorEnabled="true">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/repeatPasswordText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:maxLines="1" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/verificationCodeLayout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_padding_20"
				android:layout_marginTop="@dimen/margin_padding_10"
				android:hint="@string/hint_sign_verification_code"
				android:visibility="gone"
				app:errorEnabled="true">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/verificationCodeText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionDone"
					android:inputType="text"
					android:maxLines="1" />

			</com.google.android.material.textfield.TextInputLayout>

		</LinearLayout>

	</ScrollView>

	<FrameLayout
		android:id="@+id/signButtonContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/signButton"
			android:layout_width="match_parent"
			android:layout_height="@dimen/button_height"
			android:layout_marginStart="@dimen/margin_padding_20"
			android:layout_marginEnd="@dimen/margin_padding_20"
			android:backgroundTint="?attr/colorButtonTint"
			android:stateListAnimator="@null"
			android:text="@string/button_sign_in_text"
			android:textStyle="bold"
			app:cornerRadius="@dimen/corner_radius_8"
			tools:text="Вход" />

		<ProgressBar
			android:id="@+id/signProcessIndicator"
			android:layout_width="@dimen/progress_bar_small"
			android:layout_height="@dimen/progress_bar_small"
			android:layout_gravity="center"
			android:indeterminate="true"
			android:indeterminateTint="?attr/colorProgressBarTint"
			android:indeterminateTintMode="src_atop"
			android:visibility="gone" />

	</FrameLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/accountButton"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="@dimen/button_height"
		android:layout_marginStart="@dimen/margin_padding_20"
		android:layout_marginEnd="@dimen/margin_padding_20"
		android:layout_marginBottom="@dimen/margin_padding_20"
		android:text="@string/button_sign_no_account_text"
		android:textAllCaps="false"
		android:textColor="@color/grey_500"
		android:visibility="invisible"
		app:cornerRadius="@dimen/corner_radius_8"
		tools:text="Нет аккаунта?"
		tools:visibility="visible" />

</LinearLayout>